--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "michaelga0",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/rest": "^2.4.3",
     "@discordjs/voice": "^0.18.0",
     "chalk": "^5.4.1",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
-    "index.js": "^0.0.3"
+    "index.js": "^0.0.3",
+    "opusscript": "^0.0.8",
+    "prism-media": "^1.3.5"
   }
 }
