--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "index.js": "^0.0.3",
-    "mongoose": "^8.10.1",
     "opusscript": "^0.0.8",
-    "prism-media": "^1.3.5"
+    "prism-media": "^1.3.5",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7"
   }
 }
