--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "index.js": "^0.0.3",
     "opusscript": "^0.0.8",
     "prism-media": "^1.3.5",
-    "sequelize": "^6.37.5",
+    "sequelize": "^6.37.5"
+  },
+  "devDependencies": {
     "sqlite3": "^5.1.7"
   }
 }
