--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "node ."
+    "test": "node .",
+    "lint": "npx eslint . --fix"
   },
   "keywords": [],
   "author": "michaelga0",
@@ -22,6 +23,8 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
     "sqlite3": "^5.1.7"
   }
 }
