--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "node .",
+    "test": "jest --testMatch='**/tests/unit-tests/**/*.js' --detectOpenHandles",
     "lint": "npx eslint . --fix"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
   "devDependencies": {
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "sqlite3": "^5.1.7"
   }
 }
