--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "opusscript": "^0.0.8",
     "pg": "^8.14.1",
     "prism-media": "^1.3.5",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "eslint": "^9.22.0",
-    "jest": "^29.7.0",
-    "sqlite3": "^5.1.7"
+    "jest": "^29.7.0"
   }
 }
