--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest --testMatch='**/tests/unit-tests/**/*.js' --detectOpenHandles",
+    "test": "jest --detectOpenHandles",
     "lint": "npx eslint . --fix"
   },
   "keywords": [],
